css/location-modal.css
.locModal-content__item {
  display: none;
}
.locModal-content__item:first-child {
  display: block;
}

.locModal-name__item {
  display: inline-block;
  font-size: 11px;
  line-height: 14px;
  margin-bottom: 13px;
  position: relative;
  text-transform: initial;
}

.locModal-name__item:hover {
  cursor: pointer;
}

.locModal-name__item::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -0.1px;
  width: 0;
  height: 1px;
  background-color: #000;
  transition: width 0.3s ease;
}

.locModal-name__item:hover::after {
  width: 100%;
  transition-delay: 0.1s;
}

.locModal-name__item.active {
  font-family: "Gotham Pro Medium";
}

.locModal__title {
  text-transform: uppercase;
  font-size: 14px;
  line-height: 20px;
}

@media (min-width: 768px) {
  .locModal__title {
    font-size: 30px;
    line-height: 70px;
  }
  .locModal-name__item {
    font-size: 20px;
    line-height: 25px;
  }
}

/* ============= */

.locModal__btn-close {
  position: absolute;
  width: 34px;
  height: 34px;
  top: 24px;
  right: 24px;
  background-color: transparent;
}

.locModal__btn-close::before,
.locModal__btn-close::after {
  position: absolute;
  content: "";
  width: 20px;
  height: 2px;
  background-color: #fff;
}

.locModal__btn-close::after {
  transform: rotate(45deg);
}

.locModal__btn-close::before {
  transform: rotate(-45deg);
}

.active-img {
  height: 100%;
  width: 100%;
  max-width: 100%;
  min-height: 100%;
}

